--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,41 @@
-*{
-    list-style-type: none;
-    text-decoration: none;
-}
 :root{
     --navy-blue: #2E2F42;
     --slate: #434455;
     --ocean: #404BBF;
     --iris: #4D5AE5;
 }
+/* Стилі для обнулення відступів у елементів */
 h1, h2, h3, h4, h5, h6, p {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-img{
-    display: block;
-}
-ul, ol {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-}
+        margin: 0;
+    }
 
+    /* обнулення базових властивостей списків (ul) */
+    ul {
+        list-style: none;
+        padding-left: 0;
+        margin: 0;
+    }
+
+    /* обнулення базових властивостей у посилань */
+    a {
+        text-decoration: none;
+    }
+
+    /* Властивості для коректного відображення картинок */
+    img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+        svg {
+            display: block;
+            max-width: 100%;
+            height: auto;
+        }
+    /* Властивості для обнулення курсиву address */
+    address {
+        font-style: normal;
+    }
 
 body {
     font-family: "Roboto", sans-serif;
@@ -76,6 +91,23 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--navy-blue);
     padding: 24px 0;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current{
+    position: relative;
+
+}
+.current::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    background-color: var(--ocean);
+    border-radius: 2px;
+    height: 4px;
+    width: 100%;
 }
 
 .header-nav-li:hover,
@@ -90,16 +122,15 @@ margin-left: auto;
 font-style: normal;
 display: flex;
 gap: 40px;
-
-
 }
+
 .site-contacts-one
 {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--slate);
-}
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 .site-contacts-one:hover,
 .site-contacts-one:focus {
@@ -107,8 +138,14 @@ gap: 40px;
 }
 /* -sec 1- */
 .section-one{
-    background-color: var(--navy-blue);
-padding: 188px 0;
+
+        background-color: rgba(46, 47, 66, 0.7);
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+    url(../images/people-office.png);
+
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 188px 0;
     max-height: 600px;
     
 }
@@ -170,6 +207,14 @@ margin: 0 auto 48px;
 .strategy-list-li{
     width: calc((100% - 72px) / 4);
 }
+.strategy-block{
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background: #f4f4fd;
+    margin-bottom: 8px;        
+}
 
 .sections-two-headers{
 color: var(--navy-blue);
@@ -177,15 +222,18 @@ font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
-    margin-bottom: 8px;
+margin-bottom: 8px;
+}
+.icon-antena{
+padding-left: 100px;
 }
 .sections-two-p{
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
-
 }
+
 /* -- sec 3 */
 .section-three{
     background-color: #F4F4FD;
@@ -268,7 +316,7 @@ margin-bottom: 72px;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 
 }
 .portfolio-list-header{
@@ -292,6 +340,10 @@ background-color: var(--navy-blue);
 height: 312px;
 padding: 100px 0;
 }
+.footer-container{
+    display: flex;
+    gap: 120px;
+}
 .footer-company-logo{
     display: inline-block;
     line-height: 1.17;
@@ -306,8 +358,23 @@ padding: 100px 0;
 .footer-company-logo-span {
     color: #f4f4fd;
 }
-.footer-p {
+.footer-logo-text {
 line-height: 1.5;
 color: #F4F4FD;
 letter-spacing: 0.02em;
+}
+.footer-links-block{
+    display: flex;
+    flex-direction: column;
+}
+.media{
+    display: flex;
+    gap: 16px;
+}
+.footer-links-text{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
 }
