--- a/css/styles.css
+++ b/css/styles.css
@@ -56,8 +56,10 @@ border-bottom: 1px solid #E7E9FC;
 }
 
 .header-container{
+    /* padding: 0; */
     display: flex;
     align-items: center;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .company-logo{
@@ -97,6 +99,7 @@ color: var(--navy-blue);
 
 .current{
     position: relative;
+    color: #404bbf;
 
 }
 .current::after{
@@ -137,17 +140,22 @@ gap: 40px;
     color: var(--ocean);
 }
 /* -sec 1- */
-.section-one{
+
+.section-one {
+
 
         background-color: rgba(46, 47, 66, 0.7);
-    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/people-office.png);
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        padding: 188px 0;
+}
 
-    background-repeat: no-repeat;
-    background-position: center center;
-    padding: 188px 0;
-    max-height: 600px;
-    
+
+.sec-hero{
+    max-width: 1440px;
 }
 
 .hero-header-name{
