--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --slate: #434455;
     --ocean: #404BBF;
     --iris: #4D5AE5;
+    --icons: #f4f4fd;
 }
 /* Стилі для обнулення відступів у елементів */
 h1, h2, h3, h4, h5, h6, p {
@@ -143,7 +144,6 @@ gap: 40px;
 
 .section-one {
 
-
         background-color: rgba(46, 47, 66, 0.7);
         background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
             url(../images/people-office.png);
@@ -152,7 +152,6 @@ gap: 40px;
         background-size: cover;
         padding: 188px 0;
 }
-
 
 .sec-hero{
     max-width: 1440px;
@@ -350,7 +349,9 @@ padding: 100px 0;
 }
 .footer-container{
     display: flex;
-    gap: 120px;
+    align-items: baseline;
+    /* gap: 120px; */
+
 }
 .footer-company-logo{
     display: inline-block;
@@ -362,6 +363,9 @@ padding: 100px 0;
     font-weight: bold;
     color: var(--iris);
     margin-bottom: 16px;
+}
+.footer-logo-block{
+margin-right: 120px;
 }
 .footer-company-logo-span {
     color: #f4f4fd;
@@ -379,7 +383,36 @@ letter-spacing: 0.02em;
     display: flex;
     gap: 16px;
 }
+.media-list{
+width: 40px;
+height: 40px;
+
+}
+.media-item{
+    width: 100%;
+    height: 100%;
+    background-color: var(--iris);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.media-item:hover,
+.media-item:focus{
+    background-color: #31d0aa;
+}
+
+
+.media-svg{
+width: 24px;
+height: 24px;
+fill: var(--icons);
+}
+
 .footer-links-text{
+    margin-bottom: 16px;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
