--- a/css/styles.css
+++ b/css/styles.css
@@ -231,9 +231,9 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 margin-bottom: 8px;
 }
-.icon-antena{
+/* .icon-antena{
 padding-left: 100px;
-}
+} */
 .sections-two-p{
     font-weight: 400;
     font-size: 16px;
@@ -293,6 +293,50 @@ line-height: 150%;
 letter-spacing: 0.02em;
 text-align: center;
 }
+
+.team-media {
+    padding-left: 16px;
+    display: flex;
+    gap: 24px;
+}
+
+.team-media-list {
+    width: 40px;
+    height: 40px;
+
+}
+
+.team-media-item {
+    width: 100%;
+    height: 100%;
+    background-color: var(--iris);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-media-item:hover,
+.team-media-item:focus {
+    background-color: #31d0aa;
+}
+
+
+.team-media-svg {
+    width: 24px;
+    height: 24px;
+    fill: var(--icons);
+}
+
+
+
+
+
+
+
+
+
 /* -- sec 4 */
 .section-four{
     background-color: #fff;
