--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,7 @@ margin: 0 auto 48px;
     height: 56px;
     border: none;
     border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-order:hover,
