--- a/css/styles.css
+++ b/css/styles.css
@@ -336,14 +336,6 @@ background-color: #404bbf;
     fill: var(--icons);
 }
 
-
-
-
-
-
-
-
-
 /* -- sec 4 */
 .section-four{
     background-color: #fff;
@@ -370,7 +362,34 @@ margin-bottom: 72px;
 .portfolio-list-li{
     width: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
+        overflow: hidden;
+
+    }
+
+.overlay {
+    /* padding: 8px; */
+    background: #4d5ae5;
+    color: #fff;
+    font-family: sans-serif;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms ease-in-out;
 }
+.overlay-text{
+    /* width: 296px; */
+    padding: 40px 32px 40px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+}
+
 .portfolio-list-item{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
@@ -383,7 +402,10 @@ margin-bottom: 72px;
         0 1px 6px 0 rgba(46, 47, 66, 0.08);
 
 }
-
+.portfolio-list-li:hover .overlay,
+.portfolio-list-li:focus .overlay {
+    transform: translateY(0);
+}
 .portfolio-list-header{
 color: var(--navy-blue);
 font-weight: 500;
