--- a/css/styles.css
+++ b/css/styles.css
@@ -362,10 +362,13 @@ margin-bottom: 72px;
 .portfolio-list-li{
     width: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
-        overflow: hidden;
 
     }
+
+.portfolio-list-form{
+        position: relative;
+            overflow: hidden;
+}
 
 .overlay {
     /* padding: 8px; */
@@ -379,16 +382,17 @@ margin-bottom: 72px;
     height: 100%;
     transform: translateY(100%);
     transition: transform 250ms ease-in-out;
+        padding: 40px 32px 40px;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            color: #f4f4fd;
 }
-.overlay-text{
+/* .overlay-text{
     /* width: 296px; */
-    padding: 40px 32px 40px;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-}
+
+} */
 
 .portfolio-list-item{
     padding: 32px 16px;
@@ -402,8 +406,7 @@ margin-bottom: 72px;
         0 1px 6px 0 rgba(46, 47, 66, 0.08);
 
 }
-.portfolio-list-li:hover .overlay,
-.portfolio-list-li:focus .overlay {
+.portfolio-list-form:hover .overlay{
     transform: translateY(0);
 }
 .portfolio-list-header{
