--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,11 @@ body {
 }
 .header{
 border-bottom: 1px solid #E7E9FC;
+box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
+0px 1px 1px rgba(46, 47, 66, 0.16),
+0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+
 .section{
     padding: 120px 0;
 }
@@ -60,7 +64,7 @@ border-bottom: 1px solid #E7E9FC;
     /* padding: 0; */
     display: flex;
     align-items: center;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+
 }
 
 .company-logo{
