--- a/css/styles.css
+++ b/css/styles.css
@@ -251,7 +251,9 @@ margin-bottom: 8px;
 .section-three{
     background-color: #F4F4FD;
 }
-
+.container-three{
+    padding: 32px 0;
+}
 .section-three-header {
     font-weight: 700;
     font-size: 36px;
