--- a/css/styles.css
+++ b/css/styles.css
@@ -274,17 +274,18 @@ margin-bottom: 72px;
 }           
 .team-list-li{
 border-radius: 0 0 4px 4px;
-    padding: 0px 0px 32px 0px;
+padding: 32px 0;
+    /* padding: 0px 0px 32px 0px; */
     width: 264px;
     height: 428px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
 }
 
-.team-list-item {
+/* .team-list-item {
 padding: 32px 0 auto;
 
-}
+} */
 
 .team-list-header{
 font-weight: 500;
