--- a/css/styles.css
+++ b/css/styles.css
@@ -251,9 +251,9 @@ margin-bottom: 8px;
 .section-three{
     background-color: #F4F4FD;
 }
-.container-three{
+/* .container-three{
     padding: 32px 0;
-}
+} */
 .section-three-header {
     font-weight: 700;
     font-size: 36px;
@@ -274,7 +274,7 @@ margin-bottom: 72px;
 }           
 .team-list-li{
 border-radius: 0 0 4px 4px;
-padding: 32px 0;
+/* padding: 32px 0; */
     /* padding: 0px 0px 32px 0px; */
     width: 264px;
     height: 428px;
@@ -283,7 +283,7 @@ padding: 32px 0;
 }
 
 /* .team-list-item {
-padding: 32px 0 auto;
+padding: 32px 0;
 
 } */
 
@@ -388,7 +388,7 @@ margin-bottom: 72px;
     width: 100%;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms ease-in-out;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 40px 32px 40px;
             font-weight: 400;
             font-size: 16px;
