--- a/css/styles.css
+++ b/css/styles.css
@@ -147,18 +147,18 @@ gap: 40px;
 /* -sec 1- */
 
 .section-one {
-
-        background-color: rgba(46, 47, 66, 0.7);
-        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-            url(../images/people-office.png);
+        max-width: 1440px;
+        /* background-color: rgba(46, 47, 66, 0.7); */
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.png);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: cover;
+        /* background-size: cover; */
         padding: 188px 0;
+
 }
 
 .sec-hero{
-    max-width: 1440px;
+    /* max-width: 1440px; */
 }
 
 .hero-header-name{
