--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ gap: 40px;
 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.png);
         background-repeat: no-repeat;
         background-position: center;
-        /* background-size: cover; */
+        background-size: cover;
         padding: 188px 0;
 
 }
