--- a/css/styles.css
+++ b/css/styles.css
@@ -251,9 +251,9 @@ margin-bottom: 8px;
     background-color: #F4F4FD;
         /* padding: 32px 0; */
 }
-.container-three{
+/* .container-three{
     padding: 32px 0;
-}
+} */
 .section-three-header {
     font-weight: 700;
     font-size: 36px;
@@ -270,6 +270,7 @@ margin-bottom: 72px;
     display: flex;
     gap: 24px;
     justify-content: center;
+    padding: 32px 0;
 
 }           
 
