--- a/css/styles.css
+++ b/css/styles.css
@@ -276,8 +276,8 @@ margin-bottom: 72px;
 
 .team-list-li{
 border-radius: 0 0 4px 4px;
-padding: 32px 0;
-    /* padding: 0px 0px 32px 0px; */
+/* padding: 32px 0; */
+
     width: 264px;
     height: 428px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -310,6 +310,7 @@ margin: 0px auto 8px;
 }
 
 .team-media {
+    padding: 32px 0;
     padding-left: 16px;
     display: flex;
     gap: 24px;
