--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ margin-bottom: 8px;
 /* -- sec 3 */
 .section-three{
     background-color: #F4F4FD;
-        /* padding: 32px 0; */
+        padding: 32px 0;
 }
 /* .container-three{
     padding: 32px 0;
@@ -284,10 +284,14 @@ border-radius: 0 0 4px 4px;
     background: #fff;
 }
 
-/* .team-list-item {
+.team-list-item {
 padding: 32px 0;
+display: flex;
+    flex-direction: column;
+            justify-content: center;
+                align-items: center;
 
-} */
+}
 
 .team-list-header{
 font-weight: 500;
@@ -296,7 +300,7 @@ line-height: 120%;
 letter-spacing: 0.02em;
 text-align: center;
 color: var(--navy-blue);
-margin: 32px auto 8px;
+/* margin: 32px auto 8px; */
 }
 
 .team-list-p{
@@ -310,7 +314,7 @@ margin: 0px auto 8px;
 }
 
 .team-media {
-    padding: 32px 0;
+    /* padding: 32px 0; */
     padding-left: 16px;
     display: flex;
     gap: 24px;
